--- a/js-snack-2/index.html
+++ b/js-snack-2/index.html
@@ -14,7 +14,7 @@
     <title>JS function snack</title>
 </head>
 <body>
-    <main>
+    <main class="container justify-content-center pt-5">
         <div id="red-text"></div>
         <div id="green-text"></div>
     </main>
